--- a/pelnar/libs/common-ui/src/lib/todo-list/todo-list.component.html
+++ b/pelnar/libs/common-ui/src/lib/todo-list/todo-list.component.html
@@ -1,3 +1,6 @@
 <p>todo-list works2!</p>
 
-<!-- {{($todos | async).length}} -->
+{{todosLoaded$ | async}}
+{{(todos$ | async)?.length}}
+
+<button (click)="test()">Button</button>
