--- a/pelnar/libs/common-ui/src/lib/todo-item/todo-item.component.html
+++ b/pelnar/libs/common-ui/src/lib/todo-item/todo-item.component.html
@@ -6,7 +6,7 @@
 </mat-list-item>
 <div *ngIf="editing" class="editor">
 <mat-card >
-    <mat-card-header>Edit ToDO</mat-card-header>
+    <mat-card-header>Edit TODO</mat-card-header>
     <mat-card-content> <pelnar-todo-editor [todo]="todo" (done)="onDone()">
         </pelnar-todo-editor></mat-card-content>
 </mat-card>
