Oprava zbytecneho null opp

--- a/pelnar/libs/common-ui/src/lib/todo-item/todo-item.component.html
+++ b/pelnar/libs/common-ui/src/lib/todo-item/todo-item.component.html
@@ -1,5 +1,5 @@
-<mat-list-item [class.complete]="todo?.completed" *ngIf="!editing">
-    <mat-checkbox [checked]="todo?.completed" (change)="checkChange($event)"></mat-checkbox>
+<mat-list-item [class.complete]="todo.completed" *ngIf="!editing">
+    <mat-checkbox [checked]="todo.completed" (change)="checkChange($event)"></mat-checkbox>
     <span (click)="edit()" class="editable">
         {{ todo.text }}
     </span>
